--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Compile LaTeX Document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: main.tex
-          working_directory: report
+          root_file: report.tex
+          working_directory: AerE-361-Final-Project
       - name: Commit files
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
