--- a/.github/workflows/build_latex.yml
+++ b/.github/workflows/build_latex.yml
@@ -15,7 +15,7 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           root_file: report.tex
-          working_directory: AerE-361-Final-Project
+          working_directory: report
       - name: Commit files
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
